<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cantalinear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepremCantaFragment"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/corner">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:padding="8dp"
                android:src="@drawable/depremcantasi_tr"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Deprem Çantası Hazırlayalım"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/water"
                        tools:layout_editor_absoluteX="21dp"
                        tools:layout_editor_absoluteY="212dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:text="@string/suaciklama" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/red" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/kiyafet"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        tools:layout_editor_absoluteX="21dp"
                        tools:layout_editor_absoluteY="212dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="140dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/montaciklama" />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/red" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/caki"
                        android:padding="12dp"
                        tools:layout_editor_absoluteX="21dp"
                        tools:layout_editor_absoluteY="212dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:text="@string/cakiaciklama" />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/red" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:src="@drawable/cakmak"
                        android:padding="0dp"
                        android:layout_gravity="center"
                        tools:layout_editor_absoluteX="21dp"
                        tools:layout_editor_absoluteY="212dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/cakmakaciklama" />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/red" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/fener"
                        android:padding="10dp"
                        tools:layout_editor_absoluteX="21dp"
                        tools:layout_editor_absoluteY="212dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:text="@string/feneraciklama" />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/red" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ilkyardimcantasi"
                        android:padding="10dp"
                        tools:layout_editor_absoluteX="21dp"
                        tools:layout_editor_absoluteY="212dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:text="@string/ilkyardimaciklama" />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/red" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/konserve"
                        android:padding="10dp"
                        tools:layout_editor_absoluteX="21dp"
                        tools:layout_editor_absoluteY="212dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:text="@string/yemekaciklama" />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/red" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/uykutulumu"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        tools:layout_editor_absoluteX="21dp"
                        tools:layout_editor_absoluteY="212dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="140dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:text="@string/tulumaciklama" />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/red" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/sarjaleti"
                        android:padding="10dp"
                        tools:layout_editor_absoluteX="21dp"
                        tools:layout_editor_absoluteY="212dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:text="@string/sarjaciklama" />
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/red" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="160dp"
                        android:src="@drawable/para"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        tools:layout_editor_absoluteX="21dp"
                        tools:layout_editor_absoluteY="212dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="160dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:text="@string/paraaciklama" />
                </LinearLayout>
            </LinearLayout>


        </ScrollView>

        <!--        <ScrollView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent" >-->
        <!--            <LinearLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="100dp"-->
        <!--                android:orientation="vertical">-->
        <!--                <ImageView-->
        <!--                    android:layout_width="100dp"-->
        <!--                    android:layout_height="100dp"-->
        <!--                    android:src="@drawable/water"-->
        <!--                    tools:layout_editor_absoluteX="21dp"-->
        <!--                    tools:layout_editor_absoluteY="212dp" />-->

        <!--                <TextView-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:gravity="center"-->
        <!--                    android:text="@string/suaciklama"-->

        <!--                android:padding="5dp"/>-->
        <!--            </LinearLayout>-->
        <!--            <LinearLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="100dp"-->
        <!--                android:orientation="horizontal">-->
        <!--                <ImageView-->
        <!--                    android:layout_width="100dp"-->
        <!--                    android:layout_height="100dp"-->
        <!--                    android:src="@drawable/konserve"-->
        <!--                    tools:layout_editor_absoluteX="21dp"-->
        <!--                    tools:layout_editor_absoluteY="212dp" />-->

        <!--                <TextView-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:gravity="center"-->
        <!--                    android:padding="5dp"-->
        <!--                    />-->
        <!--            </LinearLayout>-->
        <!--            <LinearLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="100dp"-->
        <!--                android:orientation="horizontal">-->
        <!--                <ImageView-->
        <!--                    android:layout_width="100dp"-->
        <!--                    android:layout_height="100dp"-->
        <!--                    android:src="@drawable/konserve"-->
        <!--                    tools:layout_editor_absoluteX="21dp"-->
        <!--                    tools:layout_editor_absoluteY="212dp" />-->

        <!--                <TextView-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:gravity="center"-->
        <!--                    android:padding="5dp"-->
        <!--                    />-->
        <!--            </LinearLayout>-->
        <!--            <LinearLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="100dp"-->
        <!--                android:orientation="horizontal">-->
        <!--                <ImageView-->
        <!--                    android:layout_width="100dp"-->
        <!--                    android:layout_height="100dp"-->
        <!--                    android:src="@drawable/konserve"-->
        <!--                    tools:layout_editor_absoluteX="21dp"-->
        <!--                    tools:layout_editor_absoluteY="212dp" />-->

        <!--                <TextView-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:gravity="center"-->
        <!--                    android:padding="5dp"-->
        <!--                    />-->
        <!--            </LinearLayout>-->

        <!--        </ScrollView>-->
    </LinearLayout>

</LinearLayout>